--- a/stylesphilanthropy.css
+++ b/stylesphilanthropy.css
@@ -17,7 +17,7 @@ a:visited{
 }
 a:hover{
   text-decoration: none;
-  color:pink;
+  color:#990000;
 }
 h2{
   font-size: 50px;
